<resources>
    <string name="app_name">Food Trux</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">349378388841351</string>
    <string name="fb_login_protocol_scheme">fb349378388841351</string>
    <string name="label_logout">Logout</string>
    <string name="label_loggin_in">Logging In…</string>
    <string name="google_btn_text">Sign in with Google</string>
    <string name="facebook_btn_text">Continue with Facebook</string>

    <string name="settings_menu">Settings</string>
    <string name="location_rationale">We need your location to find food trucks around you.</string>
    <string name="navigation_view_header_title">User Name</string>
    <string name="navigation_view_header_subtitle">User Email address</string>
    <string name="action_settings">Settings</string>

    <!--Setting the preferences labels -->
    <string name="pref_push_notification">Push Notifications</string>
    <string name="pref_suggestion_label">Food Truck Suggestion</string>
    <string name="pref_suggestion_off">Suggestions for Food trucks are off</string>
    <string name="pref_suggestion_on">Suggestions for food truck are active</string>
    <string name="pref_suggestions_key">suggestions_key</string>

    <string name="pref_deals_key">new_deals_key</string>
    <string name="pref_new_deals_summary_off">Activate to get new deal alerts</string>
    <string name="pref_new_deals_summary_on">New deals notifications are active</string>
    <string name="pref_new_deals_label">New Deals</string>

    <string name="pref_location">Location</string>

    <string name="pref_bg_loc_key">background_location_key</string>
    <string name="pref_bg_loc_summary_off">Turn it on to receive location based suggestions</string>
    <string name="pref_bg_loc_summary_on">Location based suggestions are active</string>
    <string name="pref_bg_loc_label">Background Location</string>

    <string name="pref_location_picker_label">Preferred Location</string>
    <string name="pref_location_picker_key">pref_location_key</string>
    <string name="pref_location_picker_summary">Select your preferred location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distance">480 ft</string>
    <string name="food_truck_title">Delux Eatery and Drinkery</string>
    <string name="number_of_reviews_text">351 reviews</string>
    <string name="cuisine_type">American ( Traditional )</string>

    <string name="tools_business_name">Agave Mexican Restaurant</string>
    <string name="tools_business_desc"><![CDATA[Lounges, American, Venue & Event Spaces]]></string>
    <string name="tools_business_hrs">12 PM - 10 PM</string>
    <string name="tools_business_address">101 E San Fernando St, San Jose, CA 95112</string>
    <string name="tools_business_phone">408–714-9133</string>
    <string name="label_call">Call</string>
    <string name="label_directions">Get Directions</string>

    <string name="nearby">Nearby</string>
    <string name="group_chat">Group Chat</string>
    <string name="send_message_hint">Send Message</string>
    <string name="btn_send_message">Send</string>
    <string name="profile_other">Other Profile</string>

    <string name="tools_price">$$$</string>
    <string name="label_hrs_today">Hours Today</string>
    <string name="label_photos">Photos</string>
    <string name="label_upload">Upload</string>
    <string name="label_cancel">cancel</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_add_review">Add review</string>
    <string name="tools_user_name">Akshay Mathur</string>
    <string name="tools_review_text">I had the crispy and the super (regular) tacos and the billy burrito. The billy burrito is just a Cali burrito but beware, because there is beans in it. It…</string>
    <string name="label_submit">submit</string>
    <string name="hint_review_text">Review</string>

    <string name="search_hint">Search Food Trucks</string>
    <string name="label_search">Search</string>
    <string name="error_empty_review">Review Text cannot be empty</string>
    <string name="new_location">New Location Identified</string>
    <string name="load_new_results">Load New Results</string>

    <string name="username_string">Jogn Doe</string>
    <string name="action_account">Profile</string>
    <string name="likes_text">likes</string>
    <string name="likes_count">45</string>
    <string name="likes_count_text">20</string>
    <string name="username">John Doe</string>
    <string name="action_favorite">Favorite</string>
    <string name="see_all_text">See All</string>
    <string name="user_profile_cardview_title">Recent Visits</string>
    <string name="reviews_count">156 Reviews</string>
    <string name="recent_visits_title">Recent Visits</string>
    <string name="favorites_title">Favorites</string>
    <string name="reviews_title">Reviews</string>

    <string name="label_address">Address</string>
    <string name="label_hrs_format">(24-hour)</string>
    <string name="submit_review">Submit Review</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="label_loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="label_uploading">Uploading</string>

    <string name="edit_button">Edit</string>
    <string name="user_email_address">johndoe@gmail.com</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.  Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.  Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.  Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.</string>
    <string name="title_group">Group Chat</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="top_picks_title">Top Picks for you</string>
    <string name="share_with_group">Share with Group</string>
    <string name="share_via_social_media">Share via Social Media</string>
    <string name="share_food_truck">Share via</string>
    <string name="share_food_truck_content">Checkout this amazing food truck \n %1$s</string>
    <string name="back_to_home">Back To home</string>
    <string name="label_no_results">No Results Found</string>
    <string name="tools_rating_based_on">Based on 777 Reviews</string>
    <string name="rating_string">Based on %d Reviews</string>
    <string name="label_take_photo">Take photo</string>
    <string name="label_choose_photo">Choose photo</string>


</resources>
