<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_push_notification">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/pref_default_suggestions"
            android:key="@string/pref_suggestions_key"
            android:summaryOff="@string/pref_suggestion_off"
            android:summaryOn="@string/pref_suggestion_on"
            android:title="@string/pref_suggestion_label"
            />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/pref_default_new_deals"
            android:key="@string/pref_deals_key"
            android:summaryOff="@string/pref_new_deals_summary_off"
            android:summaryOn="@string/pref_new_deals_summary_on"
            android:title="@string/pref_new_deals_label"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_location">

    </PreferenceCategory>



</PreferenceScreen>