<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/label_search"
        app:showAsAction="ifRoom"/>-->
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/label_logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24px"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_nearby"
        android:title="@string/nearby"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/action_account"
        app:showAsAction="always"
        />

</menu>