<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="obj" type="com.codepath.com.sffoodtruck.data.model.Business"/>
    </data>

    <RelativeLayout
        android:id="@+id/rlBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBusiness"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin16"
            app:roundedCornersImageUrl="@{obj.imageUrl}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tools_business_name"
            android:text="@{obj.name}"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/ivBusiness"
            android:layout_toRightOf="@+id/ivBusiness"
            android:layout_toEndOf="@+id/ivBusiness"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@+id/ivBusiness"
            android:layout_toEndOf="@+id/ivBusiness"
            android:layout_marginTop="@dimen/margin12"
            tools:rating="5"
            android:rating="@{obj.rating}"
            android:isIndicator="true"
            android:id="@+id/ratingBar"/>

        <TextView
            android:id="@+id/tvReviewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/reviews_count"
            android:text="@{String.format(`%s reviews`,obj.reviewCount)}"
            android:layout_alignTop="@+id/ratingBar"
            android:layout_toRightOf="@+id/ratingBar"
            android:layout_toEndOf="@+id/ratingBar"
            android:layout_marginLeft="@dimen/margin12"
            android:layout_marginStart="@dimen/margin12"/>

        <TextView
            android:id="@+id/tvBusinessAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tools_business_address"
            android:layout_marginTop="@dimen/margin12"
            android:layout_below="@+id/tvReviewCount"
            android:layout_toRightOf="@+id/ivBusiness"
            android:layout_toEndOf="@+id/ivBusiness"
            android:text="@{obj.location.completeAddress}"/>

    </RelativeLayout>
</layout>
