<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.codepath.com.sffoodtruck.detailview.BusinessDetailFragment">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/first_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin8"
                        android:layout_marginLeft="@dimen/margin8"
                        android:layout_marginRight="@dimen/margin8"
                        android:layout_marginStart="@dimen/margin8"
                        android:layout_marginTop="@dimen/margin8">

                        <TextView
                            android:id="@+id/tv_business_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding4"
                            tools:text="@string/tools_business_desc"/>

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/rbFoodTruckRating"
                            style="?attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_business_desc"
                            android:layout_marginBottom="@dimen/margin8"
                            android:layout_marginTop="@dimen/margin8"
                            android:isIndicator="true"
                            tools:rating="5"/>

                        <TextView
                            android:id="@+id/tv_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@id/tv_business_desc"
                            android:layout_marginBottom="@dimen/margin8"
                            android:layout_marginTop="@dimen/margin8"
                            android:padding="@dimen/padding4"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            tools:text="@string/tools_price"/>

                        <TextView
                            android:id="@+id/tv_label_hours_today"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rbFoodTruckRating"
                            android:padding="@dimen/padding4"
                            android:text="@string/label_hrs_today"/>

                        <TextView
                            android:id="@+id/tv_business_hrs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rbFoodTruckRating"
                            android:layout_toEndOf="@id/tv_label_hours_today"
                            android:layout_toRightOf="@id/tv_label_hours_today"
                            android:padding="@dimen/padding4"
                            tools:text="@string/tools_business_hrs"/>

                        <TextView
                            android:id="@+id/tv_business_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_business_hrs"
                            android:padding="@dimen/padding4"
                            tools:text="@string/tools_business_address"/>
                    </RelativeLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/second_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_card"
                android:layout_marginTop="@dimen/margin8"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin8"
                    android:layout_marginLeft="@dimen/margin8"
                    android:layout_marginRight="@dimen/margin8"
                    android:layout_marginStart="@dimen/margin8"
                    android:layout_marginTop="@dimen/margin8"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rl_directions_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8">

                        <ImageView
                            android:id="@+id/iv_directions_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_directions_black_24dp"/>

                        <TextView
                            android:id="@+id/tv_directions_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_directions_icon"
                            android:layout_toRightOf="@id/iv_directions_icon"
                            android:padding="@dimen/padding8"
                            android:text="@string/label_directions"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"/>

                    </RelativeLayout>

                    <View
                        android:id="@+id/first_divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin8"
                        android:background="@color/colorDivider"/>

                    <RelativeLayout
                        android:id="@+id/rl_call_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin8">

                        <ImageView
                            android:id="@+id/iv_call_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_call_black_24dp"/>

                        <TextView
                            android:id="@+id/tv_call_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/iv_call_icon"
                            android:layout_toRightOf="@id/iv_call_icon"
                            android:padding="@dimen/padding8"
                            android:text="@string/label_call"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_business_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/tv_call_text"
                            android:layout_toRightOf="@id/tv_call_text"
                            android:padding="@dimen/padding8"
                            tools:text="@string/tools_business_phone"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin8"
                        android:background="@color/colorDivider"/>

                </LinearLayout>


            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>